# snapshotplot

./: .gitignore  CHANGELOG.md  CLOUD_BACKEND_SPEC.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  STATIC_SITE_GENERATOR.md  pyproject.toml  setup.py  test_installation.py
.github/workflows/: ci.yml  lint.yml  node-cloud.yml  publish-snapshots.yml
cloud/: README.md
cloud/app/: README.md  env.example  package.json
cloud/app/api/: README.md
cloud/app/api/snapshots/: finalize.md  publish.md  upload-artifact.md
cloud/app/lib/: supabase-client.md  supabase.ts
cloud/functions/: README.md
cloud/migrations/: 001_init.sql
examples/: demo.py  jupyter_example.ipynb  site_demo.py
my-research-plots/: _config.yml  generate_plots.py
my-research-plots/.github/workflows/: build-plots.yml
my-research-plots/_includes/: footer.html  header.html  plot-card.html
my-research-plots/_layouts/: default.html  gallery.html  plot.html
my-research-plots/collections/experiments/: _index.md
my-research-plots/collections/experiments/20250717_152701_767_Clustering-Analysis/: index.md
my-research-plots/collections/experiments/20250717_152701_767_Linear-Regression-Analysis/: index.md
my-research-plots/collections/experiments/20250717_152701_767_Random-Walk-Simulation/: index.md
my-research-plots/collections/visualizations/: _index.md
my-research-plots/collections/visualizations/20250717_152701_767_Data-Distribution-Analysis/: index.md
my-research-plots/collections/visualizations/20250717_152701_767_Sine-and-Cosine-Comparison/: index.md
my-research-plots/docs/: index.html
my-research-plots/docs/assets/: style.css
my-research-plots/docs/experiments/: index.html
my-research-plots/docs/experiments/20250717_152701_767_Clustering-Analysis/: index.html
my-research-plots/docs/experiments/20250717_152701_767_Linear-Regression-Analysis/: index.html
my-research-plots/docs/experiments/20250717_152701_767_Random-Walk-Simulation/: code.py  index.html
my-research-plots/docs/visualizations/: index.html
my-research-plots/docs/visualizations/20250717_152701_767_Data-Distribution-Analysis/: index.html
my-research-plots/docs/visualizations/20250717_152701_767_Sine-and-Cosine-Comparison/: index.html
snapshotplot/: __init__.py  cli.py  code_capture.py  file_manager.py  html_writer.py  jupyter_integration.py  publisher.py  site_generator.py  snapshot.py  templates.py  timestamp.py  utils.py
tests/: test_snapshot.py
