[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapshotplot"
version = "0.1.0"
description = "Capture Python code, Matplotlib plots, and HTML documentation in one step"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Anastasia Marchenkova", email = "hello@amarchenkova.com"}
]
keywords = ["matplotlib", "plotting", "documentation", "snapshot", "html"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "pygments>=2.15.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/amarchenkova/snapshotplot"
Repository = "https://github.com/amarchenkova/snapshotplot"
Documentation = "https://github.com/amarchenkova/snapshotplot#readme"
Issues = "https://github.com/amarchenkova/snapshotplot/issues"

[project.scripts]
snapshotplot = "snapshotplot.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["snapshotplot*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 